fix layout issues

--- a/index.css
+++ b/index.css
@@ -10,8 +10,7 @@ body {
     max-height: 1000px;
     height: 400px;
     width: 550px;
-    margin: auto;
-    margin-top: 150px;
+    margin: 150px auto;
     border-radius: 15px;
 }
 img {
